--- a/build.properties
+++ b/build.properties
@@ -11,13 +11,8 @@ impl.title=Pentaho CE Audit Plugin
 project.description=Pentaho CE Audit Plugin
 testsrc.dir=test
 dependency.bi-platform.revision=TRUNK-SNAPSHOT
-#Properties for Pentaho 5.0
+#Properties for Pentaho 9.1
 cpk.pentaho.artifact=cpk-pentaho5
-cpf.pentaho.artifact=cpf-pentaho5
+cpf.pentaho.artifact=cpf-pentaho
 dependency.cpk.revision=TRUNK-SNAPSHOT
 dependency.cpf.revision=TRUNK-SNAPSHOT
-#Properties for Pentaho 4.x
-#cpk.pentaho.artifact=cpk-pentaho
-#cpf.pentaho.artifact=cpf-pentaho
-#dependency.cpk.revision=TRUNK-SNAPSHOT
-#dependency.cpf.revision=REFACTOR-SNAPSHOT
